# cpp_lib

./: .gitignore  CMakeLists.txt  vcpkg.json
code/: CMakeLists.txt
code/theBin/: CMakeLists.txt
code/theBin/src/: main.cpp
libs/myLib/: CMakeLists.txt
libs/myLib/src/: MyCodeLib.cpp
